# render-thing

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  deny.toml  rust-toolchain.toml  rustfmt.toml  todos.md
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: unsafe-reviewer.md
.claude/context/: overview.md
.claude/context/modules/: camera.md  command_buffer.md  context.md  debug.md  descriptor.md  frame.md  input.md  lib.md  meshes.md  pipeline.md  primitives.md  renderer.md  resources.md  swapchain.md  sync.md  ui.md
.claude/skills/new-shader/: SKILL.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: cleanup-2026-03-REQUIREMENTS.md
.planning/milestones/cleanup-2026-03-phases/1/: 01-SUMMARY.md  PLAN.md
.planning/milestones/cleanup-2026-03-phases/2/: CONTEXT.md  RESEARCH.md
.planning/phases/1/: CONTEXT.md  RESEARCH.md
.planning/phases/2/: PLAN.md
assets/shaders/: colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  cull.comp  gradient.comp  gradient_color.comp  input_structures.glsl  mesh.frag  mesh.vert  object_structures.glsl  shader.frag  shader.vert  sky.comp  tex_image.frag
crates/application/: Cargo.toml  cargo.toml
crates/application/src/: camera.rs  main.rs
crates/assets/: build.rs  build.rs.ignore  cargo.toml
crates/engine/: Cargo.toml  build.rs
crates/engine/src/: bindless.rs  camera.rs  command_buffer.rs  context.rs  debug.rs  descriptor.rs  frame.rs  gltf_scene.rs  input.rs  lib.rs  material.rs  meshes.rs  pipeline.rs  primitives.rs  renderer.rs  resources.rs  scene.rs  stats.rs  swapchain.rs  sync.rs  ui.rs
crates/engine/src/egui_renderer/: allocator.rs  error.rs  mod.rs  vulkan.rs
crates/game/: Cargo.toml
crates/game/src/: geometry.rs  level.rs  main.rs  physics.rs  player.rs
crates/scene/: Cargo.toml
crates/scene/src/: gltf.rs  graph.rs  lib.rs  panel.rs
docs/: RENDERING.md
docs/plans/: 2026-03-03-gltf-full-hierarchy-design.md  2026-03-03-gltf-full-hierarchy.md  2026-03-03-gltf-node-transform-design.md  2026-03-03-gltf-node-transform.md
shaders/: compile.bat  shader.vert
src/: camera.rs  context.rs  debug.rs  main.rs  math.rs  primitives.rs  static_data.rs  swapchain.rs  swapchain_old.rs  texture.rs
src/engine/: context.rs  debug.rs  mod.rs  renderer.rs  swapchain.rs
