[workspace]
resolver = "3"

members = ["crates/*"]
default-members = ["crates/application"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Dominik Baumann <hey@sobrinth.com>"]

[workspace.dependencies]

#
# Workspace member crates 
#

engine = { path = "crates/engine" }
assets = { path = "crates/assets" }

#
# External crates
#

ash = "0.38"
ash-window = "0.13"
winit = "0.30"
log = "0.4"
env_logger = "0.11"
itertools = "0.14.0"
vk-mem = "0.4.0"
