[workspace]
resolver = "3"

members = ["crates/*"]
default-members = ["crates/application"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Dominik Baumann <hey@sobrinth.com>"]

[workspace.dependencies]

#
# Workspace member crates 
#

engine = { path = "crates/engine" }
scene = { path = "crates/scene" }

#
# External crates
#

ash = "0.38"
ash-window = "0.13"
raw-window-handle = "0.6"
winit = "0.30"
log = "0.4"
env_logger = "0.11"
egui = "0.35.0"
egui-winit = "0.35.0"
itertools = "0.15.0"
thiserror = "2.0"
vk-mem = "0.5.0"
gltf = { version = "1.4.1", features = ["utils"] }
nalgebra-glm = "0.21.0"
