[package]
name = "render-thing"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
engine.workspace = true
scene = { workspace = true, features = ["egui"] }
egui.workspace = true
egui-winit.workspace = true
winit.workspace = true
env_logger.workspace = true
nalgebra-glm.workspace = true