[package]
name = "engine"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
ash.workspace = true
ash-window.workspace = true
egui.workspace = true
egui-ash-renderer.workspace = true
egui-winit.workspace = true
winit.workspace = true
itertools.workspace = true
log.workspace = true
vk-mem.workspace = true
gltf.workspace = true
nalgebra-glm.workspace = true